@@ -3,8 +3,8 @@ package com.dooray.bookstorecarts.service;
 import com.dooray.bookstorecarts.entity.Cart;
 import com.dooray.bookstorecarts.entity.CartItem;
 import com.dooray.bookstorecarts.exception.CartNotFoundException;
-import com.dooray.bookstorecarts.feign.BookFeignClient;
 import com.dooray.bookstorecarts.redisdto.RedisCartDto;
+import com.dooray.bookstorecarts.redisdto.RedisCartItemDto;
 import com.dooray.bookstorecarts.repository.UserCartItemRepository;
 import com.dooray.bookstorecarts.repository.UserCartRedisRepository;
 import com.dooray.bookstorecarts.repository.UserCartRepository;
@@ -14,7 +14,6 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -23,32 +22,27 @@ public class UserCartService {
     private final UserCartItemService userCartItemService;
     private final UserCartItemRepository userCartItemRepository;
     private final UserCartRedisRepository userCartRedisRepository;
-    private final BookFeignClient bookFeignClient;
+    private final CartResponseService cartResponseService;
 
 
     public CartResponse getCartByUserId(Long userId) {    // 유저 아이디로 회원카트 반환
         RedisCartDto redisCart = userCartRedisRepository.findByUserId(userId);
         if (redisCart != null) {
             List<CartItem> items = redisCart.getItems().stream()
-                    .map(dto -> {
-                        CartItem item = new CartItem();
-                        item.setId(dto.getCartItemId());
-                        item.setBookId(dto.getBookId());
-                        item.setQuantity(dto.getQuantity());
-                        return item;
-                    })
-                    .collect(Collectors.toList());
-            Cart cart = new Cart();
-            cart.setId(redisCart.getCartId());
-            cart.setUserId(redisCart.getUserId());
-            return new CartResponse(cart, items, bookFeignClient);
+                    .map(RedisCartItemDto::toEntity)
+                    .toList();
+
+            Cart cart = new Cart(redisCart.getCartId(), redisCart.getUserId());
+            return cartResponseService.createFromUserCart(cart, items);
         }
 
         Cart cart = userCartRepository.findByUserId(userId)
                 .orElseThrow(() -> new CartNotFoundException(userId));
+
         List<CartItem> items = userCartItemRepository.findByCart(cart);
         userCartRedisRepository.save(RedisCartDto.from(cart, items));
-        return new CartResponse(cart, items, bookFeignClient);
+
+        return cartResponseService.createFromUserCart(cart, items);
     }
 
     public Cart getCartEntityByUserId(Long userId) { // 이 메서드는 무조건 db 에서만 가져오기!!
